# infra

./: .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .ozy.yaml  .pre-commit-config.yaml  .pylintrc  .setup.sh.swp  .shellcheckrc  .travis.yml  BuildingCompilers.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODO  admin-cross-builds.sh  admin-daily-builds.sh  arch-mappings.sh  basldasd.json  bla.json  build_and_upload_latest_clang.sh  build_and_upload_latest_clang_concepts.sh  build_and_upload_latest_clang_cppx.sh  build_and_upload_latest_gcc.sh  build_compiler.py  build_cppx_clang.sh  build_cross_compilers.sh  build_deployment.sh  build_gcc.py  build_gcc.sh  ce_install.ps1  common-inc.sh  crontab.admin  crontab.builder  crontab.root.admin  d-explorer.conf  (+81 more)
.claude/: format-file.py  settings.json
.github/: actionlint.yaml
admin/: .gitignore  503.html  builds.html  builds.js  fish_prompt.fish  index.html  knockout.simpleGrid.3.0.js  libraries.html  simpleGrid.js  status.css  status.html  status.js
analytics/: .eslintignore  compilestats.js  install.sh  package-lock.json  package.json  readme.md
clang/: Dockerfile
compilation-lambda/: .eslintignore  .eslintrc.yml  .gitignore  INTEGRATION_TESTING.md  README.md  index.js  index.test.js  integration.test.js  lambda_function.py  package-lock.json  package.json  pyproject.toml  test_lambda_function.py
compilation-lambda/lib/: README.md  aws-clients.js  http-forwarder.js  routing.js  routing.test.js  utils.js  websocket-client.js
compiler-base/: Dockerfile
conan/: backup_remotes.txt  backup_settings.yml  switch-to-ce.sh  switch-to-default.sh
cost-reports/: CostReportJune2025.md
d-explorer/: Dockerfile
docs/: aarch64_execution_workflow.md  adding_msvc_compilers.md  adding_new_language_libraries.md  adding_rust_crates.md  authentication_design.md  aws_architecture_blue_green.md  aws_architecture_comparison.md  aws_architecture_current.md  aws_architecture_visual.md  blue_green_deployment_beta_setup.md  blue_green_deployment_strategy.md  ce_install_yaml.md  cefs.md  claude_explain.md  colored-queues-implementation.md  compilation-lambda-to-instances-migration.md  cpp_library_commands.md  deploying_claude_explain.md  filter-system.md  fortran_library_commands.md  gh_runner_debugging.md  go_library_building.md  installing_compilers.md  lambda-managed-instances-plan.md  lambda_compilation_workflow.md  lazy-mount-daemon-design.md  library_configuration.md  local_explain_development.md  nsjail.md  oidc_third_party_access.md  packaging_qnx.md  papertrail_solarwinds_api.md  release_new_version.md  resizing_conan_disk.md  resizing_smb_disk.md  sqs_scaling_aarch64.md  updating_asm-parser.md  windows_architecture.md  windows_layered_filesystem_investigation.md  windows_library_builder.md
events-lambda/: .eslintrc.yml  config.js  eslint.config.mjs  events-connections.js  events-connections.test.js  events-onconnect.js  events-onconnect.test.js  events-ondisconnect.js  events-ondisconnect.test.js  events-sendmessage.js  events-sendmessage.test.js  package-lock.json  package.json  readme.md
exec/: Dockerfile  run.sh
extract-cmakecache/: CLAUDE.md  CMake-Cache-Extraction-Guide.md  Extract-CMakeCache.ps1  test-wine-msvc-full.sh  test-wine-msvc.sh  test.sh  wine-cl-wrapper.sh
gcc/: Dockerfile
gcc-cross/: .gitignore  Dockerfile
gcc-explorer/: Dockerfile
go/: Dockerfile
grafana/: agent-latest.yaml  agent-win.yaml  agent.yaml  ce-metrics.service  grafana-agent.service  install-agent.sh  make-config-admin.sh  make-config-ci.sh  make-config.sh  update-metrics.sh
init/: autofs-ce-mounter.sh  ce-conan.service  ce-router.service  compiler-explorer.conf  compiler-explorer.service  do-discovery.sh  gcc-explorer.conf  lazy-mount-daemon.service  log-instance-id.service  mount-opt-autofs.sh  pre-start.sh  remotes.json  run.ps1  settings.yml  setup-autofs.sh  shared.sh  start-builder.ps1  start-builder.sh  start-cacher.ps1  start-conan.sh  start-conan.sh.orig  start-router.sh  start.ps1  start.sh  stop.sh
lambda/: alert_on_elb_instance.py  alert_on_elb_instance_test.py  anthropic_wrapper.py  cloudwatch_to_discord.py  cloudwatch_to_discord_test.py  direct_anthropic.py  explain.py  explain_test.py  get_deployed_exe_version.py  get_remote_execution_archs.py  pyproject.toml  requirements.txt  stats.py  stats_test.py  status.py  status_test.py  test-explain.sh
logo/: README.md  favicon.xcf
misc/: Dockerfile
msvc-install/: fxc-install.ps1  gen-props.ps1  gen-props.py  gh-msvc-install.ps1  msvc2019-install.ps1  msvc2022-install.ps1
mug/: make_mug.py
mugs/: index.html  make_arm32_eabi_mug.py  make_arm64_go_mug.py  make_arm64_mug.py  make_riscv_go_mug.py  make_riscv_mug.py  make_x86_64_att_cheatsheet.py  make_x86_64_go_mug.py  make_x86_64_intel_cheatsheet.py  make_x86_64_msvc_mug.py  make_x86_64_systemv_mug.py  mug_common.py
nginx/: bbc  ce-router.conf  default  nginx-gpu.conf  nginx-win.conf  nginx.conf  xania  xania-beta
nginx_new/: default
ocaml/: Dockerfile
packer/: .gitignore  InstallBuilderTools.ps1  InstallPwsh.ps1  InstallTools.ps1  README.md  SetUpDevTools.ps1  SetUpWinRM.ps1  Startup.ps1  aarch64-node.pkr.hcl  admin.pkr.hcl  builder.pkr.hcl  ce-router.pkr.hcl  cloudwatch-agent.json  conan.pkr.hcl  gpu-node.pkr.hcl  known_hosts  local.pkr.hcl  node.pkr.hcl  smb-local.pkr.hcl  smb.pkr.hcl  win-builder.pkr.hcl  win.pkr.hcl
queue-lambda/: config.js  package-lock.json  package.json  queue-connections.js  queue-onconnect.js  queue-ondisconnect.js  queue-sendmessage.js  readme.md
rust-explorer/: Dockerfile  compilers.sh
scripts/: build_lambda_deterministic.py  build_nodejs_lambda_deterministic.py
smb-server/: offline if they are capable of doing so.  rsync-share.sh  run.sh  smb.conf
startup/: mount-beta.sh  mount-builder.sh  (+4 more)
(+634 files in other folders)
