[tool.black]
line-length = 120
target-version = ['py310']

[tool.poetry]
name = "compiler-explorer-infra"
version = "0.0.1"
description = "Compiler Explorer infrastructure"
authors = ["Matt Godbolt <matt@godbolt.org>", "partouf <partouf@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
aws-embedded-metrics = "^2.0.1"
boto3 = "^1.24.80"
CacheControl = {extras = ["filecache"], version = "^0.12.11"}
click = "^8.1.3"
Jinja2 = "^3.1.2"
packaging = "^21.3"
paramiko = "^2.11.0"
python-dateutil = "^2.8.2"
PyYAML = "^6.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
pylint = "^2.15.3"
