[tool.ruff]
line-length = 120
target-version = "py310"

[tool.poetry]
name = "compiler-explorer-infra"
version = "0.0.1"
description = "Compiler Explorer infrastructure"
authors = ["Matt Godbolt <matt@godbolt.org>", "partouf <partouf@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
anthropic = "^0.51.0"
aws-embedded-metrics = "^3.3.0"
boto3 = "^1.24.80"
click = "^8.1.3"
Jinja2 = "^3.1.6"
paramiko = "^3.4.0"
python-dateutil = "^2.8.2"
requests = "^2.32.2"
PyYAML = "^6.0"
requests-cache = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"
requests-mock = "^1.10.0"
ruff = "^0.11.7"

[tool.ruff.lint]
select = [
    # https://docs.astral.sh/ruff/rules/
    "E", # pycodestyle errors,
    "W", # pycodestyle warnings
    "F", # pyflake
    "B", # flake8-bugbear
    "I", # isort
]
ignore = [
    "E501" # line length
]
