[project]
name = "compiler-explorer-infra"
version = "0.0.1"
description = "Compiler Explorer infrastructure"
authors = [
    {name = "Matt Godbolt", email = "matt@godbolt.org"},
    {name = "partouf", email = "partouf@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "aws-embedded-metrics>=3.3.0",
    "boto3>=1.24.80",
    "cairosvg>=2.7.0",
    "click>=8.1.3",
    "humanfriendly>=10.0",
    "Jinja2>=3.1.6",
    "paramiko>=3.4.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
    "requests>=2.32.2",
    "PyYAML>=6.0",
    "requests-cache>=1.2.1",
    "matplotlib>=3.10.5",
    "pillow>=11.3.0",
    "PyJWT[crypto]>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pre-commit>=3.7.1",
    "requests-mock>=1.10.0",
    "ruff>=0.11.7"
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    # https://docs.astral.sh/ruff/rules/
    "E", # pycodestyle errors,
    "W", # pycodestyle warnings
    "F", # pyflake
    "FA", # pyflake future annotations
    "B", # flake8-bugbear
    "I", # isort
    "UP", # pyupgrade
    "PLC", # Pylint Convention rules
    "BLE001", # Ban blind except: Exception
]
ignore = [
    "E501" # line length
]
