[project]
name = "compilation-lambda"
version = "0.0.1"
description = "Compiler Explorer Compilation Lambda Function"
authors = [
    {name = "Matt Godbolt", email = "matt@godbolt.org"}
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.26.0",
    "requests>=2.32.2",
    "websocket-client>=1.6.0"
]

# Copied from the parent project.
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    # https://docs.astral.sh/ruff/rules/
    "E", # pycodestyle errors,
    "W", # pycodestyle warnings
    "F", # pyflake
    "B", # flake8-bugbear
    "I", # isort
]
ignore = [
    "E501" # line length
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
